[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matiiss-com"
version = "0.1.0"
description = "Flask application for matiiss.com"
requires-python = "==3.10"
dependencies = [
    "Flask==3.0.1",
    "Flask-Assets==2.1.0",
    "pyScss==1.4.0",
    "gunicorn==21.2.0"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C"]
