[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forms-matiiss-com"
version = "0.1.0"
description = "Forms application for forms.matiiss.com"
requires-python = "==3.10.*"
dependencies = [
    "Flask==3.0.1",
    "Flask-Assets==2.1.0",
    "pyScss==1.4.0",
    "gunicorn==22.0.0",
    "httpx==0.28.1"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C"]
